01-ingress-controller/03-ingress-nginxinc/03-install-via-kubectl-apply/02-install-kopi-test-example-web.yaml
#kopi-test-example.yaml
#http://192.168.10.58:8081/01-ingress-controller/03-ingress-nginxinc/03-install-via-kubectl-apply/02-install-kopi-test-example-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mushola-02 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: mushola-02
  annotations:
      ingress.class: "haproxy"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
    #- cafe.example.com
    #secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: mushola-02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      nodeSelector:
        eoffice: node03
      containers:
      - name: coffee
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: mushola-02
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: mushola-02
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tea 
  template:
    metadata:
      labels:
        app: tea 
    spec:
      nodeSelector:
        eoffice: node03
      containers:
      - name: tea 
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: mushola-02
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
